--- a/style.css
+++ b/style.css
@@ -1,18 +1,213 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    scroll-behavior: smooth;
+}
+
 #header{
     display: flex;
     flex-direction: row;
 }
 
-
-#hero{
-    background: #333 url('./assets/vietnam.png')
-    no-repeat center center/cover ;
-    height: 50vh;
-    color: #fff;
+body {
+    
+    background: url('./assets/vietnam.png');
+    width: 100vw;
+    height: 100vh;
 }
 
-#hero .hero-content{
-    top: 50%;
-    left: 3rem;
-    transform: translateY(-50%);
+/* BEGIN: SIDEBAR */
+.heading{
+    margin: 16px;
+    color: #FFF;
+    position: relative;
+   
+    width: max-content;
+ 
 }
+.heading span {
+    background-color: #000;
+    padding: 4px;
+    border-radius: 16px;
+}
+.heading i {
+    font-size: 16px;
+    position: absolute;
+
+}
+.sidebar{
+    background-image: linear-gradient(to left, rgba(51, 53, 55, 0.6) -26.48%, rgba(31, 35, 39, 0.6) 73.52%);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 360px;
+    height: 100%;  
+    display: flex;
+    
+    align-items: center;
+    justify-content: center;
+}
+.inputWrapper{
+  margin-top: 32px;
+  margin-left: 16px;
+}
+.location__Input{
+    width: 70%;
+    height: 32px;
+    margin-right: 8px;
+    border: none;
+    border-bottom: 1px solid #FFF;
+   
+    background: rgba(0, 0, 0, 0);
+    transition: ease-in-out, width .35s ease-in-out;
+    color: #FFF;
+    font-size: 16px;
+}
+.location__Input::placeholder{
+    color: #FFF;
+}
+.location__Input:focus{
+    
+    border-color: #58a6ff;
+    outline: none;
+}
+
+
+/* END: SIDEBAR */
+
+/* BEGIN: CONTENT */
+.contentWrapper{
+    display: flex;
+    flex-direction: column;
+    width: calc(100% - 360px)
+}
+.intro{
+    margin: 16px;
+    font-size: 64px;
+    color: #FFF;
+}
+
+.weather__current{
+  
+    display: flex;
+    flex-direction: column;
+    margin: 48px;
+}
+.weather_info{
+    display: flex;
+    flex-direction: row;
+}
+.tempC{
+    margin-right: 16px;
+    font-size: 84px;
+    color: #FFF;
+}
+.location{
+  
+    margin-right: 16px;
+    display: flex;
+    flex-direction: column;
+    color: #FFF;
+}
+.location__name{
+    font-size: 32px;
+}
+.location__time{
+    font-size: 16px;
+}
+.condition{
+  
+    display: flex;
+    flex-direction: column;
+    color: #FFF;
+}
+.condition__icon{
+    width: 48px;
+    height: 48px;
+    
+}
+
+/* BEGIN: TOAST */
+#toast{
+    z-index: 9999;
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 8px;
+}
+.toastWrapper {
+
+    display: flex;
+    align-items: center;
+    background-color: #FFF;
+    border-radius: 2px;
+    padding: 20px 0px;
+    border-left: 8px solid #ff623d;
+    box-shadow: 0 5px 8px rgb(0,0,0,0.08);
+    width: 360px;
+    transform: all linear .3s;
+    margin-top: 8px;
+    animation: slideInLeft ease .3s, fadeOut linear 1s 3s forwards;
+}
+@keyframes slideInLeft {
+    from {
+        opacity: 0;
+        transform: translateX(calc(100% + 32px));
+    }
+    to {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+@keyframes fadeOut {
+    to {
+        opacity: 0;
+      
+    }
+}
+.toast__icon{
+    font-size: 24px;
+    padding: 8px;
+    color: #ff623d;
+}
+.toast__body{
+
+    /* để khi content ngắn thì nút close vẫn không bị đẩy vào trong */
+    flex-grow: 1;
+
+}
+.toast__title{
+
+    font-size: 16px;
+    font-weight: 600;
+    color: #ff623d
+}
+
+.toast__msg{
+
+    padding: 4px;
+    font-size: 14px;
+    color: #888;
+    margin-top: 6px;
+    margin-right: 8px;
+    line-height: 1.5;
+}
+.toast__location{
+    font-weight: bold;
+}
+.toast__close{
+    font-size: 20px;
+    padding: 16px;
+    color: rgb(0,0,0,0.3);
+    cursor: pointer;
+}
+
+/* END: TOAST */
+
