--- a/style.css
+++ b/style.css
@@ -16,20 +16,27 @@
     flex-direction: row;
 }
 
-body {
-    
-    background: url('./assets/anhmay1.jpg');
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    height:100%;
-    width: 100%;
-    /* width: 100vw;
-    height: 100vh; */
+
+
+#page {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+    overflow: hidden;
 
+    /* background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height:100%;
+    width: 100%; */
+
+    width: 100%;
+	height: 100%;
+	background-size: cover;
+}
+@keyframes movingclouds {
+	0% {margin-left: 0%;}
+	100% {margin-left: -100%;}
+}
 /* BEGIN: INPUT */
 
 #inputForm{
@@ -47,9 +54,11 @@ body {
     background: rgba(0, 0, 0, 0);
     transition: ease-in-out, width .35s ease-in-out;
     color: #FFF;
+    text-align: center;
 }
 .location__Input::placeholder{
     color: #FFF;
+    text-align: center;
 }
 .location__Input:focus{
     
@@ -93,9 +102,24 @@ body {
     height: 100px;
     padding: 20px;
 }
+.detail__title{
+    font-weight: bold;
+}
 .tempC{
     font-size: 84px;
     color: #FFF;
+}
+.changeDeg{
+    display: flex;
+    flex-direction: row;
+  
+}
+
+.deg__Btn{
+    padding: 4px;
+    background: none;
+    border: none;
+    color: inherit;
 }
 .location__name{
     font-size: 32px;
@@ -112,9 +136,12 @@ body {
 /* BEGIN: TOAST */
 #toast{
     z-index: 9999;
-    position: absolute;
     bottom: 0;
     margin-bottom: 8px;
+
+    position: fixed;
+    right: 32px;
+    z-index: 9999;
 }
 .toastWrapper {
 
@@ -209,6 +236,7 @@ body {
 
 .card__time{
     font-size: 22px;
+    font-weight: bold;
 }
 
 /* BEGIN: CHART */
