--- a/style.css
+++ b/style.css
@@ -1,114 +1,68 @@
 
-  @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    font-family: 'M PLUS Rounded 1c', sans-serif;
-    scroll-behavior: smooth;
-}
-
-#header{
+/* #header{
     display: flex;
     flex-direction: row;
-}
-
-
-
+} */
 #page {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    align-items: center;
-    overflow: hidden;
-
-    /* background-repeat: no-repeat;
-    background-size: 100% 100%;
-    height:100%;
-    width: 100%; */
-
+    align-items: center; */   
+     
+    /*background-repeat: no-repeat; */
+    /* background-size: 100% 100%;
     width: 100%;
-	height: 100%;
-	background-size: cover;
+	height: 100%; */
+	/* background-size: cover; */
+    /* position: relative; */
+
+
+
+    /* width: 100%;
+    height: 100%; */
+   
 }
-@keyframes movingclouds {
+
+/* @keyframes movingclouds {
 	0% {margin-left: 0%;}
 	100% {margin-left: -100%;}
-}
-/* BEGIN: INPUT */
+} */
 
-#inputForm{
-     display: flex;
-     flex-direction: row;
-     font-size: 20px;
-     margin-top: 16px;
-     margin-bottom: 16px;
-}
 
-.location__Input{
-    width: min-content;
-    height: 32px;
-    border: none;
-    border-bottom: 1px solid #FFF;
-    background: rgba(0, 0, 0, 0);
-    transition: ease-in-out, width .35s ease-in-out;
-    color: #FFF;
-    text-align: center;
+/* SIDEBAR:  */
+.sidebar{
+    background-image: linear-gradient(to left, rgba(51, 53, 55, 0.6) -26.48%, rgba(31, 35, 39, 0.6) 73.52%);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 420px;
+    height: 100%;  
+    display: flex;
+    /* align-items: center;
+    justify-content: center; */
 }
-.location__Input::placeholder{
-    color: #FFF;
-    text-align: center;
-}
-.location__Input:focus{
-    
-    border-color: #58a6ff;
-    outline: none;
-}
-/* END: INPUT */
-
 /* BEGIN: CONTENT */
 .contentWrapper{
     display: flex;
     flex-direction: column;
+    /* width: calc(100% - 420px); */
+    position: fixed;
+  /* left: 0; */
+
     width: 100%;
     justify-content: center;
     align-items: center;
 }
 
-.weather__current{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 12px;
 
-}
 .weather__info{
     display: flex;
     flex-direction: row;
     position: relative;
 }
-.weather__detail{
-    display: flex;
-    flex-direction: row;
-}
-.detail__info{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-   
-    margin: 8px;
-    background-image: linear-gradient(to left, rgba(216, 224, 232, 0.6) -26.48%, rgba(231, 239, 248, 0.6) 73.52%);
-    border-radius: 10px;
-    width: 100px;
-    height: 100px;
-    padding: 20px;
-}
-.detail__title{
-    font-weight: bold;
-}
+
+
+
 .weather__temperature{
     font-size: 84px;
     color: #FFF;
@@ -242,10 +196,10 @@
     margin: 8px;
 }
 
-.card__time{
+/* .card__time{
     font-size: 22px;
     font-weight: bold;
-}
+} */
 
 /* BEGIN: CHART */
 
@@ -270,3 +224,174 @@
     margin-bottom: 8px;
     color: #000;
 }
+#changeDay__BtnWrapper{
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    bottom: 0;
+    background-color: #000;
+    align-items: center;
+    justify-content: center;
+
+}
+
+
+
+
+/*  */
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    scroll-behavior: smooth;
+}
+
+/* For all */
+html, body {
+    overflow-x: hidden;
+    background-color: #dde3e8
+}
+
+
+
+body {
+    width: 100vw;
+    height: 100vh;
+}
+#page {
+    width: 100%;
+    height: 100%;
+   
+}
+
+#banner{
+    background-color: #000;
+    height: 50%;
+    margin: 24px;
+    border-radius: 16px;
+    background-image: url(./assets/anhmay.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: end;
+}
+.weather__current{
+    display: flex;
+    flex-direction: column;
+
+    margin: 16px;
+}
+#content{
+
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin: 0px 24px 0px 24px;
+}
+
+.dayCard{
+    display: flex;
+    flex-direction: row;
+    background-color: #FFF;
+    width: 250px;
+    height: 100px;
+    border-radius: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-block: 12px;
+}
+
+.card__temperature{
+
+    font-size: 24px;
+}
+.card__time{
+    font-size: 16px;
+}
+
+.card__condition{
+ 
+    font-size: 16px;
+    width: 100px;
+    height: 100px;
+    background-color: #5f7ead;
+    border-radius: 16px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#chart{
+    width: calc(100% - 286px) ;
+}
+
+.weather__detail{
+    display: flex;
+    flex-direction: row;
+    /* height: 100px; */
+   
+   
+}
+
+.detail__info{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100px;
+    height: 50px;
+    background-color:  #5f7ead;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    margin-left: 4px;
+
+
+}
+.detail__title{
+    font-weight: bold;
+    background-color: #FFF;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+}
+
+
+
+/* BEGIN: INPUT */
+
+#inputForm{
+    display: flex;
+    flex-direction: row;
+    font-size: 20px;
+}
+
+.location__Input{
+   width: min-content;
+   height: 32px;
+   border: none;
+   border-bottom: 1px solid #FFF;
+   background: rgba(0, 0, 0, 0);
+   transition: ease-in-out, width .35s ease-in-out;
+   color: #FFF;
+   text-align: center;
+}
+.location__Input::placeholder{
+   color: #FFF;
+   text-align: center;
+}
+.location__Input:focus{
+   
+   border-color: #58a6ff;
+   outline: none;
+}
+/* END: INPUT */
