handle chart to show weather today

--- a/style.css
+++ b/style.css
@@ -184,6 +184,10 @@
     flex-direction: row;
     margin-bottom: 48px;
 }
+.cardTitle{
+    font-size: 28px;
+    font-weight: normal;
+}
 .card__detail{
     display: flex;
     flex-direction: column;
@@ -242,7 +246,7 @@
 
 
 
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
 
 * {
     margin: 0;
@@ -250,7 +254,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-family: 'Kalam', cursive;
     scroll-behavior: smooth;
 }
 
@@ -266,6 +270,15 @@ body {
     width: 100vw;
     height: 100vh;
 }
+
+.fontBold{
+    color: #9a9b9c;
+    font-weight: bold;
+}
+.fontThin {
+    color: #000;
+    font-weight: lighter ;
+}
 #page {
     width: 100%;
     height: 100%;
@@ -274,22 +287,21 @@ body {
 
 #banner{
     background-color: #000;
-    height: 50%;
+    height: 60%;
     margin: 24px;
     border-radius: 16px;
     background-image: url(./assets/anhmay.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: end;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .weather__current{
     display: flex;
     flex-direction: column;
-
-    margin: 16px;
+    align-items: center;
 }
 #content{
 
@@ -325,6 +337,7 @@ body {
     font-size: 16px;
     width: 100px;
     height: 100px;
+    padding-inline: 4px;
     background-color: #5f7ead;
     border-radius: 16px;
     text-align: center;
@@ -339,10 +352,8 @@ body {
 
 .weather__detail{
     display: flex;
-    flex-direction: row;
-    /* height: 100px; */
-   
-   
+    flex-direction: row;   
+    align-items: end;
 }
 
 .detail__info{
@@ -351,20 +362,13 @@ body {
     text-align: center;
     width: 100px;
     height: 50px;
-    background-color:  #5f7ead;
-    border-top-left-radius: 16px;
-    border-top-right-radius: 16px;
     margin-left: 4px;
 
 
 }
 .detail__title{
     font-weight: bold;
-    background-color: #FFF;
-    border-top-left-radius: 16px;
-    border-top-right-radius: 16px;
 }
-
 
 
 /* BEGIN: INPUT */
