--- a/style.css
+++ b/style.css
@@ -1,59 +1,100 @@
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
 
-/* #header{
-    display: flex;
-    flex-direction: row;
-} */
+/* Reset CSS */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-family: 'Kalam', cursive;
+    scroll-behavior: smooth;
+}
+
+/* For all */
+html, body {
+    overflow-x: hidden;
+    background-color: #dde3e8
+}
+
+body {
+    width: 100vw;
+    height: 100vh;
+}
+
+.fontBold{
+    color: #9a9b9c;
+    font-weight: bold;
+}
+.fontThin {
+    color: #000;
+    font-weight: lighter ;
+}
 #page {
-    /* display: flex;
-    flex-direction: column;
-    align-items: center; */   
-     
-    /*background-repeat: no-repeat; */
-    /* background-size: 100% 100%;
     width: 100%;
-	height: 100%; */
-	/* background-size: cover; */
-    /* position: relative; */
-
-
-
-    /* width: 100%;
-    height: 100%; */
+    height: 100%;
    
 }
+/* 
+1. Từ ngoài vào trong
+2. Từ trên xuống dưới
+3. Tổng quan đến chi tiết
+*/
 
-/* @keyframes movingclouds {
-	0% {margin-left: 0%;}
-	100% {margin-left: -100%;}
-} */
+/* BEGIN: BANNER */
+#banner{
 
-
-/* SIDEBAR:  */
-.sidebar{
-    background-image: linear-gradient(to left, rgba(51, 53, 55, 0.6) -26.48%, rgba(31, 35, 39, 0.6) 73.52%);
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    width: 420px;
-    height: 100%;  
-    display: flex;
-    /* align-items: center;
-    justify-content: center; */
-}
-/* BEGIN: CONTENT */
-.contentWrapper{
     display: flex;
     flex-direction: column;
-    /* width: calc(100% - 420px); */
-    position: fixed;
-  /* left: 0; */
-
-    width: 100%;
     justify-content: center;
     align-items: center;
+    height: 60%;
+    margin: 24px;
+    border-radius: 16px;
+    background-color: #000;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
+/* BEGIN: INPUT */
+
+#inputForm{
+    display: flex;
+    flex-direction: row;
+    font-size: 20px;
+}
+
+/*
+1. Vị trí
+2. Kích thước (Width, height)
+3. Màu sắc
+4. Hình dáng (Kiểu chữ, 
+*/
+
+.location__Input{
+    width: min-content;
+    height: 32px;
+    text-align: center;
+    border: none;
+    border-bottom: 1px solid #FFF;
+    background: rgba(0, 0, 0, 0);
+    transition: ease-in-out, width .35s ease-in-out;
+    color: inherit;
+    font-weight: bold;
+}
+
+.location__Input:focus{
+   
+   border-color: #58a6ff;
+   outline: none;
+}
+/* END: INPUT */
+
+.weather__current{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .weather__info{
     display: flex;
@@ -65,7 +106,7 @@
 
 .weather__temperature{
     font-size: 84px;
-    color: #FFF;
+    color: inherit;
 }
 .tempIcon{
     font-size: 30px;
@@ -82,6 +123,7 @@
     background: none;
     border: none;
     color: inherit;
+    font-family: inherit;
 }
 .location__name{
     font-size: 32px;
@@ -93,30 +135,110 @@
     width: 96px;
     height: 96px; 
 }
+.weather__detail{
+    display: flex;
+    flex-direction: row;   
+    align-items: end;
+}
+
+.detail__info{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100px;
+    height: 50px;
+    margin-left: 4px;
+}
+.detail__title{
+    font-weight: bold;
+}
+
+
+/* END: BANNER */
+#content{
+
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin: 0px 24px 0px 24px;
+}
+/* BEGIN: NEXTDAY CARD */
+.dayCard{
+    display: flex;
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-block: 12px;
+    width: 250px;
+    height: 100px;
+    border-radius: 16px;
+    background-color: #FFF;
+}
+
+.card__temperature{
+
+    font-size: 24px;
+}
+.card__time{
+    font-size: 16px;
+}
+
+.card__icon {
+    width: 48px;
+    height: 48px;
+}
+
+.card__condition{
+    width: 100px;
+    height: 100px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-inline: 4px;
+    border-radius: 16px;
+    font-size: 16px;
+    background-color: #5f7ead;
+}
+.card__info {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-inline: 16px;
+}
+.cardTitle{
+    font-size: 28px;
+    font-weight: normal;
+}
+/* END: NEXTDAY CARD */
+/* BEGIN: CHART */
+#chart{
+    width: calc(100% - 286px) ;
+}
+
 
 
 /* BEGIN: TOAST */
 #toast{
-    z-index: 9999;
-    bottom: 0;
-    margin-bottom: 8px;
-
     position: fixed;
+    bottom: 0;
     right: 32px;
+    margin-bottom: 8px;
     z-index: 9999;
 }
 .toastWrapper {
-
+    width: 360px;
     display: flex;
     align-items: center;
-    background-color: #FFF;
+    margin-top: 8px;
     border-radius: 2px;
     padding: 20px 0px;
     border-left: 8px solid #ff623d;
     box-shadow: 0 5px 8px rgb(0,0,0,0.08);
-    width: 360px;
     transform: all linear .3s;
-    margin-top: 8px;
+    background-color: #FFF;
     animation: slideInLeft ease .3s, fadeOut linear 1s 3s forwards;
 }
 @keyframes slideInLeft {
@@ -153,11 +275,11 @@
 .toast__msg{
 
     padding: 4px;
-    font-size: 14px;
-    color: #888;
     margin-top: 6px;
     margin-right: 8px;
     line-height: 1.5;
+    font-size: 14px;
+    color: #888;
 }
 .toast__location{
     font-weight: bold;
@@ -170,232 +292,3 @@
 }
 
 /* END: TOAST */
-
-/* BEGIN: CARD */
-.card__icon {
-    width: 48px;
-    height: 48px;
-}
-
-/* BEGIN: CARD */
-
-.cardWrapper{
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 48px;
-}
-.cardTitle{
-    font-size: 28px;
-    font-weight: normal;
-}
-.card__detail{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 150px;
-    height: 200px;
-    background-image: linear-gradient(to left, rgba(216, 224, 232, 0.6) -26.48%, rgba(231, 239, 248, 0.6) 73.52%);
-    border-radius: 20px;
-    margin: 8px;
-}
-
-/* .card__time{
-    font-size: 22px;
-    font-weight: bold;
-} */
-
-/* BEGIN: CHART */
-
-.chartWrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-
-}
-#temperChart{
-    width:100%; 
-    max-width:700px;
-    padding: 24px;
-    border-radius: 20px;
- 
-}
-
-.chart__title{
-    font-size: 44px;
-    margin-bottom: 8px;
-    color: #000;
-}
-#changeDay__BtnWrapper{
-    display: flex;
-    flex-direction: row;
-    position: fixed;
-    bottom: 0;
-    background-color: #000;
-    align-items: center;
-    justify-content: center;
-
-}
-
-
-
-
-/*  */
-
-
-
-@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    font-family: 'Kalam', cursive;
-    scroll-behavior: smooth;
-}
-
-/* For all */
-html, body {
-    overflow-x: hidden;
-    background-color: #dde3e8
-}
-
-
-
-body {
-    width: 100vw;
-    height: 100vh;
-}
-
-.fontBold{
-    color: #9a9b9c;
-    font-weight: bold;
-}
-.fontThin {
-    color: #000;
-    font-weight: lighter ;
-}
-#page {
-    width: 100%;
-    height: 100%;
-   
-}
-
-#banner{
-    background-color: #000;
-    height: 60%;
-    margin: 24px;
-    border-radius: 16px;
-    background-image: url(./assets/anhmay.jpg);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.weather__current{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-#content{
-
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    margin: 0px 24px 0px 24px;
-}
-
-.dayCard{
-    display: flex;
-    flex-direction: row;
-    background-color: #FFF;
-    width: 250px;
-    height: 100px;
-    border-radius: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-block: 12px;
-}
-
-.card__temperature{
-
-    font-size: 24px;
-}
-.card__time{
-    font-size: 16px;
-}
-
-.card__condition{
- 
-    font-size: 16px;
-    width: 100px;
-    height: 100px;
-    padding-inline: 4px;
-    background-color: #5f7ead;
-    border-radius: 16px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-#chart{
-    width: calc(100% - 286px) ;
-}
-
-.weather__detail{
-    display: flex;
-    flex-direction: row;   
-    align-items: end;
-}
-
-.detail__info{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    width: 100px;
-    height: 50px;
-    margin-left: 4px;
-
-
-}
-.detail__title{
-    font-weight: bold;
-}
-
-
-/* BEGIN: INPUT */
-
-#inputForm{
-    display: flex;
-    flex-direction: row;
-    font-size: 20px;
-}
-
-.location__Input{
-   width: min-content;
-   height: 32px;
-   border: none;
-   border-bottom: 1px solid #FFF;
-   background: rgba(0, 0, 0, 0);
-   transition: ease-in-out, width .35s ease-in-out;
-   color: #FFF;
-   text-align: center;
-}
-.location__Input::placeholder{
-   color: #FFF;
-   text-align: center;
-}
-.location__Input:focus{
-   
-   border-color: #58a6ff;
-   outline: none;
-}
-/* END: INPUT */
