--- a/responsive.css
+++ b/responsive.css
@@ -17,4 +17,40 @@
 /* @media (max-width : 739px) */
 @media (max-width : 46.1875em)
 {  
+    #inputForm{
+        flex-direction: column;
+        align-items: center;
+        margin-block: 16px;
+    }
+    .weather__detail{
+        display: grid;
+        grid-template-areas: 
+            " a b"
+            "c d";
+    }
+    .detail__info{
+        margin-block: 8px;
+    }
+    .detail__info--seperate{
+        border-right: none;
+    }
+    #container{
+        flex-direction: column;
+        align-items: center;
+       
+        width: calc(100% - 48px);
+    }
+    .nextdaysWrapper,.dayCard{
+       width: 100%;
+    }
+    .card__condition{
+        width: calc(2/3 * 100%);
+    }
+    .cardTitle{
+        display: block;
+        text-align: center;
+    }
+    #chart{
+        width: 100%;
+    }
 }
