--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap'); */
 
+
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 /* Reset CSS */
 * {
     margin: 0;
@@ -7,7 +9,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-family: 'Kalam', cursive;
+    font-family: 'Varela Round', sans-serif;
     scroll-behavior: smooth;
 }
 
@@ -105,11 +107,13 @@ body {
 .weather__temperature{
     font-size: 84px;
     color: inherit;
+    margin-inline: 16px;
 }
-.tempIcon{
+.temp__icon{
     font-size: 30px;
     position: absolute;
-    bottom: 0;
+    right: 0;
+    transform: translateX(50%);
 }
 .changeDeg{
     display: flex;
@@ -176,7 +180,6 @@ body {
 .dayCard{
     display: flex;
     flex-direction: row;
-    display: flex;
     align-items: center;
     justify-content: space-between;
     margin-block: 12px;
