change API link

--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap'); */
-
-
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 /* Reset CSS */
 * {
@@ -144,6 +141,7 @@ body {
 .condition__icon--img{
     width: 96px;
     height: 96px; 
+    margin-inline: 16px;
 }
 .weather__detail{
     display: flex;
